--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
               <li>On dispatch des <b>actions</b> pour mettre à jour le state (du store)</li>
               <li class="fragment">Les <b>actions</b> sont envoyées aux <b>reducers</b></li>
               <li class="fragment">Les <b>reducers</b> sont des fonctions <b>pures</b></li>
-              <li class="fragment">Les <b>Reducers</b> prennent un état et une action en paramètre</li>
+              <li class="fragment">Les <b>reducers</b> prennent un état et une action en paramètre</li>
               <li class="fragment">et retournent un nouvel état dans un objet 'immutable'</li>
             </ul>
           </div>
