fix typo incrementor

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
             </code></pre>
           <pre><code data-trim>
             export const incrementor =
-                (inc) => ({type: 'INCREMENT', inc})
+                inc => ({type: 'INCREMENT', inc})
             </code></pre>
         </section>
         <section>
