--- a/index.html
+++ b/index.html
@@ -1498,14 +1498,14 @@
             <li>
               Déclarer toutes les routes dans un seul composant, comme dans la V3.
               <a
-                href="https://reactrouter.com/docs/en/v6/getting-started/overview#multiple-sets-of-routes"
+                href="https://reactrouter.com/en/main/start/concepts#defining-routes"
                 target="_blank"
                 >Exemple</a
               >
             </li>
             <li>
               Déclarer les sous routes dans chaque composant, comme dans les V4-V5.
-              <a href="https://reactrouter.com/docs/en/v6/getting-started/overview#descendant-routes" target="_blank"
+              <a href="https://reactrouter.com/en/main/start/faq#how-do-i-nest-routes-deep-in-the-tree" target="_blank"
                 >Exemple</a
               >
             </li>
