--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@
 
           it('fires events', () => {
             render(&lt;NiceInput /&gt;)
-            const input = screen.getByRole('input')
+            const input = screen.getByRole('textbox')
 
             fireEvent.change(input, {target: {value: 'new text'}})
           })
